holyc-parser/tests/corpus/passing/079-expr-expr-postfix-typecast.hc
F64 e_pcv = 5.0; I64 e_pc = e_pcv(I64);
