holyc-parser/tests/corpus/failing/006-bug-compat-bug59-c-style-cast.hc
F64 b59_y=1.0; I64 b59_x = (I64)b59_y;
